--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<body class="bg-gray100">
 		<div class="wrapper">
 			<header>
-				<div class="top-function bg-primary-color white px-4">
+				<div class="top-function bg-primary-color white px-1 px-sm-4">
 					<div class="container-fluid d-flex align-items-center">
 						<p class="ms-auto me-3">字級大小</p>
 						<ul class="top-function-list nav-pills js-top-function" role="tablist">
