--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 		<h3 class="title mb-3 mb-sm-5">產品列表</h3>
 		<div class="side-content-body px-4 px-xl-5 pt-3">
 			<ul class="row card-list align-items-stretch gx-4 gx-xl-5">
-				<li class="col-6 col-md-4 card-list-item mb-5">
+				<li class="col-6 col-md-4 card-list-item mb-3 mb-sm-5">
 					<a href="#" class="card-list-link">
 						<div class="card-list-tag">殺蟲劑</div>
 						<img src="./assets/images/demo-p1.png" class="card-list-img">
@@ -363,7 +363,7 @@
 						</p>
 					</a>
 				</li>
-				<li class="col-6 col-md-4 card-list-item mb-5">
+				<li class="col-6 col-md-4 card-list-item mb-3 mb-sm-5">
 					<a href="#" class="card-list-link">
 						<div class="card-list-tag">殺菌劑</div>
 						<img src="./assets/images/demo-p2.png" class="card-list-img">
@@ -376,7 +376,7 @@
 						</p>
 					</a>
 				</li>
-				<li class="col-6 col-md-4 card-list-item mb-5">
+				<li class="col-6 col-md-4 card-list-item mb-3 mb-sm-5">
 					<a href="#" class="card-list-link">
 						<div class="card-list-tag">殺草劑</div>
 						<img src="./assets/images/demo-p3.png" class="card-list-img">
@@ -389,7 +389,7 @@
 						</p>
 					</a>
 				</li>
-				<li class="col-6 col-md-4 card-list-item mb-5">
+				<li class="col-6 col-md-4 card-list-item mb-3 mb-sm-5">
 					<a href="#" class="card-list-link">
 						<div class="card-list-tag">殺蟲劑</div>
 						<img src="./assets/images/demo-p1.png" class="card-list-img">
@@ -402,7 +402,7 @@
 						</p>
 					</a>
 				</li>
-				<li class="col-6 col-md-4 card-list-item mb-5">
+				<li class="col-6 col-md-4 card-list-item mb-3 mb-sm-5">
 					<a href="#" class="card-list-link">
 						<div class="card-list-tag">殺菌劑</div>
 						<img src="./assets/images/demo-p2.png" class="card-list-img">
@@ -415,7 +415,7 @@
 						</p>
 					</a>
 				</li>
-				<li class="col-6 col-md-4 card-list-item mb-5">
+				<li class="col-6 col-md-4 card-list-item mb-3 mb-sm-5">
 					<a href="#" class="card-list-link">
 						<div class="card-list-tag">殺草劑</div>
 						<img src="./assets/images/demo-p3.png" class="card-list-img">
