--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:image" content="./assets/images/fb-img.png" />
     <!--分享設定-->
     <link rel="icon" href="./assets/images/favicon.png" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet"
         href="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.0/css/smoothness/jquery-ui-1.10.0.custom.min.css" />
     <!--iconfont設定-->
@@ -45,12 +45,10 @@
 					<div class="collapse navbar-collapse" id="navbarCollapse">
 						<ul class="navbar-nav ms-auto">
 							<li class="nav-item me-0 me-sm-4">
-								<a class="nav-link px-0 active" href="product.html"><img
-										src="./assets/images/ic-product.svg" alt="產品資訊"> 產品資訊</a>
+								<a class="nav-link px-0 active" href="product.html"><i class="bi bi-grid-fill"></i> 產品資訊</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link px-0" href="retrieve.html"><img src="./assets/images/ic-retrieve.svg"
-										alt="智慧檢索">
+								<a class="nav-link px-0" href="retrieve.html"><i class="bi bi-list-check"></i>
 									智慧檢索</a>
 							</li>
 						</ul>
@@ -74,30 +72,30 @@
 		<div class="input-group mb-3">
 			<input type="text" class="form-control form-control-lg" placeholder="請輸入關鍵字">
 			<button class="btn px-3" type="button">
-				<img src="./assets/images/ic-search.svg" alt="搜尋">
+				<i class="bi bi-search primary-color" style="font-size: 20px;"></i>
 			</button>
 		</div>
 		<button class="btn btn-dark-primary-color side-menu-toggler js-side-menu-toggler d-flex d-lg-none p-1"
 			type="button">
-			<img src="./assets/images/ic-arrow-open.svg" alt="產品列表"> 產品列表
+			<i class="bi bi-arrow-left-circle"></i> 產品列表
 		</button>
 		<div class="side-menu-body scroll">
 			<button class="accordion-button collapsed" type="button" data-con="no-dropdown">
-				<img src="./assets/images/ic-all.svg" alt="全部"> 全部
+				<i class="bi bi-check-all"></i> 全部
 			</button>
 			<div class="accordion" id="accordionGroup">
 				<div class="accordion-item">
 					<h2 class="accordion-header">
-						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+						<button class="accordion-button collapsed js-accordion-button" type="button" data-bs-toggle="collapse"
 							data-bs-target="#collapse1">
-							殺蟲劑(58)
+							<i class="bi bi-plus-square"></i>殺蟲劑(58)
 						</button>
 					</h2>
 					<div id="collapse1" class="accordion-collapse collapse" data-bs-parent="#accordionGroup">
 						<div class="accordion-body">
-							<button class="accordion-button accordion-sub collapsed" type="button"
+							<button class="accordion-button accordion-sub js-accordion-sub collapsed" type="button"
 								data-bs-toggle="collapse" data-bs-target="#collapse1-1">
-								殺蟲劑(58)
+								<i class="bi bi-plus"></i>殺蟲劑(58)
 							</button>
 							<div id="collapse1-1" class="accordion-collapse collapse" data-bs-parent="#collapse1">
 								<ul>
@@ -105,9 +103,9 @@
 									<li><a href="#" class="accordion-link link-gray800">殺菌劑(45)</a></li>
 								</ul>
 							</div>
-							<button class="accordion-button accordion-sub collapsed" type="button"
+							<button class="accordion-button accordion-sub js-accordion-sub collapsed" type="button"
 								data-bs-toggle="collapse" data-bs-target="#collapse1-2">
-								殺菌劑(45)
+								<i class="bi bi-plus"></i>殺菌劑(45)
 							</button>
 							<div id="collapse1-2" class="accordion-collapse collapse" data-bs-parent="#collapse1">
 								<ul>
@@ -120,16 +118,16 @@
 				</div>
 				<div class="accordion-item">
 					<h2 class="accordion-header">
-						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+						<button class="accordion-button collapsed js-accordion-button" type="button" data-bs-toggle="collapse"
 							data-bs-target="#collapse2">
-							殺草劑(48)
+							<i class="bi bi-plus-square"></i>殺草劑(48)
 						</button>
 					</h2>
 					<div id="collapse2" class="accordion-collapse collapse" data-bs-parent="#accordionGroup">
 						<div class="accordion-body">
-							<button class="accordion-button accordion-sub collapsed" type="button"
+							<button class="accordion-button accordion-sub js-accordion-sub collapsed" type="button"
 								data-bs-toggle="collapse" data-bs-target="#collapse2-1">
-								殺蟲劑(58)
+								<i class="bi bi-plus"></i>殺蟲劑(58)
 							</button>
 							<div id="collapse2-1" class="accordion-collapse collapse" data-bs-parent="#collapse2">
 								<ul>
@@ -137,9 +135,9 @@
 									<li><a href="#" class="accordion-link link-gray800">殺菌劑(45)</a></li>
 								</ul>
 							</div>
-							<button class="accordion-button accordion-sub collapsed" type="button"
+							<button class="accordion-button accordion-sub js-accordion-sub collapsed" type="button"
 								data-bs-toggle="collapse" data-bs-target="#collapse2-2">
-								殺菌劑(45)
+								<i class="bi bi-plus"></i>殺菌劑(45)
 							</button>
 							<div id="collapse2-2" class="accordion-collapse collapse" data-bs-parent="#collapse2">
 								<ul>
@@ -152,16 +150,16 @@
 				</div>
 				<div class="accordion-item">
 					<h2 class="accordion-header">
-						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+						<button class="accordion-button collapsed js-accordion-button" type="button" data-bs-toggle="collapse"
 							data-bs-target="#collapse3">
-							殺菌劑(45)
+							<i class="bi bi-plus-square"></i>殺菌劑(45)
 						</button>
 					</h2>
 					<div id="collapse3" class="accordion-collapse collapse" data-bs-parent="#accordionGroup">
 						<div class="accordion-body">
-							<button class="accordion-button accordion-sub collapsed" type="button"
+							<button class="accordion-button accordion-sub js-accordion-sub collapsed" type="button"
 								data-bs-toggle="collapse" data-bs-target="#collapse3-1">
-								殺蟲劑(58)
+								<i class="bi bi-plus"></i>殺蟲劑(58)
 							</button>
 							<div id="collapse3-1" class="accordion-collapse collapse" data-bs-parent="#collapse3">
 								<ul>
@@ -169,9 +167,9 @@
 									<li><a href="#" class="accordion-link link-gray800">殺菌劑(45)</a></li>
 								</ul>
 							</div>
-							<button class="accordion-button accordion-sub collapsed" type="button"
+							<button class="accordion-button accordion-sub js-accordion-sub collapsed" type="button"
 								data-bs-toggle="collapse" data-bs-target="#collapse3-2">
-								殺菌劑(45)
+								<i class="bi bi-plus"></i>殺菌劑(45)
 							</button>
 							<div id="collapse3-2" class="accordion-collapse collapse" data-bs-parent="#collapse3">
 								<ul>
@@ -184,16 +182,16 @@
 				</div>
 				<div class="accordion-item">
 					<h2 class="accordion-header">
-						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+						<button class="accordion-button collapsed js-accordion-button" type="button" data-bs-toggle="collapse"
 							data-bs-target="#collapse4">
-							殺瞞劑(7)
+							<i class="bi bi-plus-square"></i>殺瞞劑(7)
 						</button>
 					</h2>
 					<div id="collapse4" class="accordion-collapse collapse" data-bs-parent="#accordionGroup">
 						<div class="accordion-body">
-							<button class="accordion-button accordion-sub collapsed" type="button"
+							<button class="accordion-button accordion-sub js-accordion-sub collapsed" type="button"
 								data-bs-toggle="collapse" data-bs-target="#collapse4-1">
-								殺蟲劑(58)
+								<i class="bi bi-plus"></i>殺蟲劑(58)
 							</button>
 							<div id="collapse4-1" class="accordion-collapse collapse" data-bs-parent="#collapse4">
 								<ul>
@@ -201,9 +199,9 @@
 									<li><a href="#" class="accordion-link link-gray800">殺菌劑(45)</a></li>
 								</ul>
 							</div>
-							<button class="accordion-button accordion-sub collapsed" type="button"
+							<button class="accordion-button accordion-sub js-accordion-sub collapsed" type="button"
 								data-bs-toggle="collapse" data-bs-target="#collapse4-2">
-								殺菌劑(45)
+								<i class="bi bi-plus"></i>殺菌劑(45)
 							</button>
 							<div id="collapse4-2" class="accordion-collapse collapse" data-bs-parent="#collapse4">
 								<ul>
@@ -216,16 +214,16 @@
 				</div>
 				<div class="accordion-item">
 					<h2 class="accordion-header">
-						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+						<button class="accordion-button collapsed js-accordion-button" type="button" data-bs-toggle="collapse"
 							data-bs-target="#collapse5">
-							生技肥料、營養劑(49)
+							<i class="bi bi-plus-square"></i>生技肥料、營養劑(49)
 						</button>
 					</h2>
 					<div id="collapse5" class="accordion-collapse collapse" data-bs-parent="#accordionGroup">
 						<div class="accordion-body">
-							<button class="accordion-button accordion-sub collapsed" type="button"
+							<button class="accordion-button accordion-sub js-accordion-sub collapsed" type="button"
 								data-bs-toggle="collapse" data-bs-target="#collapse5-1">
-								殺蟲劑(58)
+								<i class="bi bi-plus"></i>殺蟲劑(58)
 							</button>
 							<div id="collapse5-1" class="accordion-collapse collapse" data-bs-parent="#collapse5">
 								<ul>
@@ -233,9 +231,9 @@
 									<li><a href="#" class="accordion-link link-gray800">殺菌劑(45)</a></li>
 								</ul>
 							</div>
-							<button class="accordion-button accordion-sub collapsed" type="button"
+							<button class="accordion-button accordion-sub js-accordion-sub collapsed" type="button"
 								data-bs-toggle="collapse" data-bs-target="#collapse5-2">
-								殺菌劑(45)
+								<i class="bi bi-plus"></i>殺菌劑(45)
 							</button>
 							<div id="collapse5-2" class="accordion-collapse collapse" data-bs-parent="#collapse5">
 								<ul>
@@ -248,16 +246,16 @@
 				</div>
 				<div class="accordion-item">
 					<h2 class="accordion-header">
-						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+						<button class="accordion-button collapsed js-accordion-button" type="button" data-bs-toggle="collapse"
 							data-bs-target="#collapse6">
-							超奈米系列(19)
+							<i class="bi bi-plus-square"></i>超奈米系列(19)
 						</button>
 					</h2>
 					<div id="collapse6" class="accordion-collapse collapse" data-bs-parent="#accordionGroup">
 						<div class="accordion-body">
-							<button class="accordion-button accordion-sub collapsed" type="button"
+							<button class="accordion-button accordion-sub js-accordion-sub collapsed" type="button"
 								data-bs-toggle="collapse" data-bs-target="#collapse6-1">
-								殺蟲劑(58)
+								<i class="bi bi-plus"></i>殺蟲劑(58)
 							</button>
 							<div id="collapse6-1" class="accordion-collapse collapse" data-bs-parent="#collapse6">
 								<ul>
@@ -265,9 +263,9 @@
 									<li><a href="#" class="accordion-link link-gray800">殺菌劑(45)</a></li>
 								</ul>
 							</div>
-							<button class="accordion-button accordion-sub collapsed" type="button"
+							<button class="accordion-button accordion-sub js-accordion-sub collapsed" type="button"
 								data-bs-toggle="collapse" data-bs-target="#collapse6-2">
-								殺菌劑(45)
+								<i class="bi bi-plus"></i>殺菌劑(45)
 							</button>
 							<div id="collapse6-2" class="accordion-collapse collapse" data-bs-parent="#collapse6">
 								<ul>
@@ -280,16 +278,16 @@
 				</div>
 				<div class="accordion-item">
 					<h2 class="accordion-header">
-						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+						<button class="accordion-button collapsed js-accordion-button" type="button" data-bs-toggle="collapse"
 							data-bs-target="#collapse7">
-							環境衛生用藥(21)
+							<i class="bi bi-plus-square"></i>環境衛生用藥(21)
 						</button>
 					</h2>
 					<div id="collapse7" class="accordion-collapse collapse" data-bs-parent="#accordionGroup">
 						<div class="accordion-body">
-							<button class="accordion-button accordion-sub collapsed" type="button"
+							<button class="accordion-button accordion-sub js-accordion-sub collapsed" type="button"
 								data-bs-toggle="collapse" data-bs-target="#collapse7-1">
-								殺蟲劑(58)
+								<i class="bi bi-plus"></i>殺蟲劑(58)
 							</button>
 							<div id="collapse7-1" class="accordion-collapse collapse" data-bs-parent="#collapse7">
 								<ul>
@@ -297,9 +295,9 @@
 									<li><a href="#" class="accordion-link link-gray800">殺菌劑(45)</a></li>
 								</ul>
 							</div>
-							<button class="accordion-button accordion-sub collapsed" type="button"
+							<button class="accordion-button accordion-sub js-accordion-sub collapsed" type="button"
 								data-bs-toggle="collapse" data-bs-target="#collapse7-2">
-								殺菌劑(45)
+								<i class="bi bi-plus"></i>殺菌劑(45)
 							</button>
 							<div id="collapse7-2" class="accordion-collapse collapse" data-bs-parent="#collapse7">
 								<ul>
@@ -312,16 +310,16 @@
 				</div>
 				<div class="accordion-item">
 					<h2 class="accordion-header">
-						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+						<button class="accordion-button collapsed js-accordion-button" type="button" data-bs-toggle="collapse"
 							data-bs-target="#collapse8">
-							聯安天然防治資材(21)
+							<i class="bi bi-plus-square"></i>聯安天然防治資材(21)
 						</button>
 					</h2>
 					<div id="collapse8" class="accordion-collapse collapse" data-bs-parent="#accordionGroup">
 						<div class="accordion-body">
-							<button class="accordion-button accordion-sub collapsed" type="button"
+							<button class="accordion-button accordion-sub js-accordion-sub collapsed" type="button"
 								data-bs-toggle="collapse" data-bs-target="#collapse8-1">
-								殺蟲劑(58)
+								<i class="bi bi-plus"></i>殺蟲劑(58)
 							</button>
 							<div id="collapse8-1" class="accordion-collapse collapse" data-bs-parent="#collapse8">
 								<ul>
@@ -329,9 +327,9 @@
 									<li><a href="#" class="accordion-link link-gray800">殺菌劑(45)</a></li>
 								</ul>
 							</div>
-							<button class="accordion-button accordion-sub collapsed" type="button"
+							<button class="accordion-button accordion-sub js-accordion-sub collapsed" type="button"
 								data-bs-toggle="collapse" data-bs-target="#collapse8-2">
-								殺菌劑(45)
+								<i class="bi bi-plus"></i>殺菌劑(45)
 							</button>
 							<div id="collapse8-2" class="accordion-collapse collapse" data-bs-parent="#collapse8">
 								<ul>
