--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<!--內容開始-->
 			<!--banner開始-->
 <div class="top-banner" data-con="product">
-	<div class="container">
+	<div class="container-xl">
 		<h1 class="top-title mb-0">產品資訊 <span>PRODUCTS</span></h2>
 	</div>
 </div>
@@ -349,7 +349,7 @@
 		<div class="side-content-body px-4 px-xl-5 pt-3">
 			<ul class="row card-list align-items-stretch gx-4 gx-xl-5">
 				<li class="col-6 col-md-4 card-list-item mb-3 mb-sm-5">
-					<a href="#" class="card-list-link">
+					<a href="product.html" class="card-list-link">
 						<div class="card-list-tag">殺蟲劑</div>
 						<img src="./assets/images/demo-p1.png" class="card-list-img">
 						<div class="card-list-circle"></div>
@@ -362,7 +362,7 @@
 					</a>
 				</li>
 				<li class="col-6 col-md-4 card-list-item mb-3 mb-sm-5">
-					<a href="#" class="card-list-link">
+					<a href="product.html" class="card-list-link">
 						<div class="card-list-tag">殺菌劑</div>
 						<img src="./assets/images/demo-p2.png" class="card-list-img">
 						<div class="card-list-circle"></div>
@@ -375,7 +375,7 @@
 					</a>
 				</li>
 				<li class="col-6 col-md-4 card-list-item mb-3 mb-sm-5">
-					<a href="#" class="card-list-link">
+					<a href="product.html" class="card-list-link">
 						<div class="card-list-tag">殺草劑</div>
 						<img src="./assets/images/demo-p3.png" class="card-list-img">
 						<div class="card-list-circle"></div>
@@ -388,7 +388,7 @@
 					</a>
 				</li>
 				<li class="col-6 col-md-4 card-list-item mb-3 mb-sm-5">
-					<a href="#" class="card-list-link">
+					<a href="product.html" class="card-list-link">
 						<div class="card-list-tag">殺蟲劑</div>
 						<img src="./assets/images/demo-p1.png" class="card-list-img">
 						<div class="card-list-circle"></div>
@@ -401,7 +401,7 @@
 					</a>
 				</li>
 				<li class="col-6 col-md-4 card-list-item mb-3 mb-sm-5">
-					<a href="#" class="card-list-link">
+					<a href="product.html" class="card-list-link">
 						<div class="card-list-tag">殺菌劑</div>
 						<img src="./assets/images/demo-p2.png" class="card-list-img">
 						<div class="card-list-circle"></div>
@@ -414,7 +414,7 @@
 					</a>
 				</li>
 				<li class="col-6 col-md-4 card-list-item mb-3 mb-sm-5">
-					<a href="#" class="card-list-link">
+					<a href="product.html" class="card-list-link">
 						<div class="card-list-tag">殺草劑</div>
 						<img src="./assets/images/demo-p3.png" class="card-list-img">
 						<div class="card-list-circle"></div>
