--- a/product.html
+++ b/product.html
@@ -262,7 +262,7 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./assets/images/demo-p1.png" alt="殺蟲劑">
+                    <img src="./assets/images/demo-p1-0.jpg" alt="殺蟲劑">
                 </div>
                 <div class="carousel-item">
                     <img src="./assets/images/demo-p1-1.jpg" alt="殺蟲劑">
@@ -444,33 +444,34 @@
             <div class="tab-pane fade" id="product4" role="tabpanel" tabindex="0">
                 <div class="info-box">
                     <div class="info-box-header">
-                        <h3 class="info-box-title">藥劑作用機制</h3>
+                        <h3 class="info-box-title">相關病蟲害資訊</h3>
                     </div>
                     <div class="info-box-body scrollbar">
                         <h4 class="info-box-subtitle pt-3">
                             <div class="info-box-id">1</div>
                             <p>紋白蝶</p><span>｜ 粉蝶科</span>
                         </h4>
-                        <div class="d-flex flex-column flex-lg-row px-3 px-md-5 py-3">
+                        <div class="d-flex flex-column flex-lg-row px-3 px-md-5 py-4">
                             <div class="info-box-side">
                                 <img src="./assets/images/demo-p4.jpg" alt="紋白蝶">
                             </div>
                             <div class="info-box-content">
                                 <div class="mb-4">
-                                    <label for="name-en" class="form-label">英文名稱</label>
-                                    <input type="text" class="form-control" id="name-en"
-                                        value="Cabbage worm (緣點紋白蝶) Imported cabbage worm (紋白蝶)" readonly>
+                                    <h5 class="info-box-subsubtitle">英文名稱</h5>
+                                    <div class="info-box-highlight">Cabbage worm (緣點紋白蝶) Imported cabbage worm (紋白蝶)</div>
                                 </div>
                                 <div class="mb-4">
-                                    <label for="scientific-name" class="form-label">學名</label>
-                                    <textarea class="form-control text-left" id="scientific-name" rows="3" readonly>Artogeia（Pieris）canidia sordida Butler (緣點紋白蝶) Artogeia（Pieris）rapae crucivova Boisduval (紋白蝶)</textarea>
+                                    <h5 class="info-box-subsubtitle">學名</h5>
+                                    <div class="info-box-highlight">
+                                        Artogeia（Pieris）canidia sordida Butler (緣點紋白蝶) Artogeia（Pieris）rapae crucivova Boisduval (紋白蝶)
+                                    </div>
                                 </div>
                                 <div class="mb-4">
-                                    <label for="crops" class="form-label">危害作物</label>
-                                    <input type="text" class="form-control" id="crops" value="十字花科植物" readonly>
+                                    <h5 class="info-box-subsubtitle">危害作物</h5>
+                                    <div class="info-box-highlight">十字花科植物</div>
                                 </div>
                                 <div>
-                                    <p class="form-label border-bottom pb-2">危害特徵 (生活習性)</p>
+                                    <h5 class="info-box-subsubtitle border-bottom bd-gray300 pb-2">危害特徵 (生活習性)</h5>
                                     <p>
                                         粉蝶科：俗稱粉蝶，生活史為卵→幼蟲→蛹→成蟲，屬於完全變態昆蟲。 中小型蝶類，翅膀通常黃色、淡黃色或白色，斑紋較淡雅，不具尾突，觸角棍棒狀狀具虹吸式口器，喜歡
                                         在陽光充足的環境成群訪花、吸食水液。幼蟲大多呈綠色。斑紋較淡雅，不具尾突，觸角棍棒狀狀具虹吸式口器，喜歡
@@ -479,32 +480,32 @@
                                 </div>
                             </div>
                         </div>
-                        <hr>
+                        <hr class="my-2">
                         <h4 class="info-box-subtitle pt-3">
                             <div class="info-box-id">2</div>
                             <p>紋白蝶</p><span>｜ 粉蝶科</span>
                         </h4>
-                        <div class="d-flex flex-column flex-lg-row px-3 px-md-5 py-3">
+                        <div class="d-flex flex-column flex-lg-row px-3 px-md-5 py-4">
                             <div class="info-box-side">
                                 <img src="./assets/images/demo-p4.jpg" alt="紋白蝶">
                             </div>
                             <div class="info-box-content">
                                 <div class="mb-4">
-                                    <label for="name-en" class="form-label">英文名稱</label>
-                                    <input type="text" class="form-control" id="name-en"
-                                        value="Cabbage worm (緣點紋白蝶) Imported cabbage worm (紋白蝶)" readonly>
+                                    <h5 class="info-box-subsubtitle">英文名稱</h5>
+                                    <div class="info-box-highlight">Cabbage worm (緣點紋白蝶) Imported cabbage worm (紋白蝶)</div>
                                 </div>
                                 <div class="mb-4">
-                                    <label for="scientific-name" class="form-label">學名</label>
-                                    <textarea class="form-control text-left" id="scientific-name" rows="3"
-                                        readonly>Artogeia（Pieris）canidia sordida Butler (緣點紋白蝶) Artogeia（Pieris）rapae crucivova Boisduval (紋白蝶)</textarea>
+                                    <h5 class="info-box-subsubtitle">學名</h5>
+                                    <div class="info-box-highlight">
+                                        Artogeia（Pieris）canidia sordida Butler (緣點紋白蝶) Artogeia（Pieris）rapae crucivova Boisduval (紋白蝶)
+                                    </div>
                                 </div>
                                 <div class="mb-4">
-                                    <label for="crops" class="form-label">危害作物</label>
-                                    <input type="text" class="form-control" id="crops" value="十字花科植物" readonly>
+                                    <h5 class="info-box-subsubtitle">危害作物</h5>
+                                    <div class="info-box-highlight">十字花科植物</div>
                                 </div>
                                 <div>
-                                    <p class="form-label border-bottom pb-2">危害特徵 (生活習性)</p>
+                                    <h5 class="info-box-subsubtitle border-bottom bd-gray300 pb-2">危害特徵 (生活習性)</h5>
                                     <p>
                                         粉蝶科：俗稱粉蝶，生活史為卵→幼蟲→蛹→成蟲，屬於完全變態昆蟲。 中小型蝶類，翅膀通常黃色、淡黃色或白色，斑紋較淡雅，不具尾突，觸角棍棒狀狀具虹吸式口器，喜歡
                                         在陽光充足的環境成群訪花、吸食水液。幼蟲大多呈綠色。斑紋較淡雅，不具尾突，觸角棍棒狀狀具虹吸式口器，喜歡
