--- a/product.html
+++ b/product.html
@@ -320,7 +320,28 @@
             <h5 class="side-menu-title mb-3">
                 <i class="bi bi-exclamation-square-fill me-2"></i> 危害防範標示
             </h5>
-            <img src="./assets/images/sign-prevent.png" alt="危害防範標示">
+            <ul class="prevent-list">
+                <li class="prevent-list-item"><img src="./assets/images/dilution1.png"></li>
+                <li class="prevent-list-item"><img src="./assets/images/dilution2.png"></li>
+                <li class="prevent-list-item"><img src="./assets/images/dilution3.png"></li>
+                <li class="prevent-list-item"><img src="./assets/images/dilution4.png"></li>
+                <li class="prevent-list-item"><img src="./assets/images/dilution5.png"></li>
+                <li class="prevent-list-item"><img src="./assets/images/dilution6.png"></li>
+                <li class="prevent-list-item"><img src="./assets/images/dilution7.png"></li>
+                <li class="prevent-list-item"><img src="./assets/images/dilution8.png"></li>
+                <li class="prevent-list-item"><img src="./assets/images/dilution1.png"></li>
+                <li class="prevent-list-item"><img src="./assets/images/dilution2.png"></li>
+                <li class="prevent-list-item"><img src="./assets/images/dilution3.png"></li>
+                <li class="prevent-list-item"><img src="./assets/images/dilution4.png"></li>
+                <li class="prevent-list-item"><img src="./assets/images/dilution5.png"></li>
+                <li class="prevent-list-item"><img src="./assets/images/dilution6.png"></li>
+                <li class="prevent-list-item"><img src="./assets/images/dilution7.png"></li>
+                <li class="prevent-list-item"><img src="./assets/images/dilution8.png"></li>
+                <li class="prevent-list-item"><img src="./assets/images/dilution5.png"></li>
+                <li class="prevent-list-item"><img src="./assets/images/dilution6.png"></li>
+                <li class="prevent-list-item"><img src="./assets/images/dilution7.png"></li>
+                <li class="prevent-list-item"><img src="./assets/images/dilution8.png"></li>
+            </ul>
         </div>
     </div>
     <!--側邊內容結束-->
