--- a/product.html
+++ b/product.html
@@ -45,10 +45,10 @@
 					<div class="collapse navbar-collapse" id="navbarCollapse">
 						<ul class="navbar-nav ms-auto">
 							<li class="nav-item me-0 me-sm-4">
-								<a class="nav-link px-0 active" href="product.html"><i class="bi bi-grid-fill"></i> 產品資訊</a>
+								<a class="nav-link px-0" href="product.html"><i class="bi bi-grid-fill"></i> 產品資訊</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link px-0" href="retrieve.html"><i class="bi bi-list-check"></i>
+								<a class="nav-link px-0" href="search.html"><i class="bi bi-list-check"></i>
 									智慧檢索</a>
 							</li>
 						</ul>
@@ -226,7 +226,7 @@
 </div>
 <!-- 視窗結束 -->
 <!--banner開始-->
-<div class="top-banner" data-con="product-detail">
+<div class="top-banner" data-con="product">
     <div class="container-xl">
         <h1 class="top-title mb-0">產品資訊 <span>PRODUCTS</span></h2>
     </div>
@@ -545,6 +545,16 @@
         </div>
     </section>
 </div>
+<script>
+    var navItems = document.querySelectorAll('.js-nav .nav-item');
+    if (navItems.length > 0) {
+        var firstNavItem = navItems[0];
+        var navLink = firstNavItem.querySelector('.nav-link');
+        if (navLink) {
+            navLink.classList.add('active');
+        }
+    }
+</script>
 				<!--內容結束-->
 				<!--footer開始-->
 				<footer class="bg-primary-color">
