--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <!--banner結束-->
 
 <!--內容開始-->
-<div class="container-xl d-flex py-5 js-container position-relative">
+<div class="container-xl d-flex py-4 py-md-5 js-container position-relative">
 	<!--側邊選單開始-->
 	<div class="side-menu js-side-menu">
 		<div class="input-group mb-3">
