--- a/search.html
+++ b/search.html
@@ -66,12 +66,12 @@
 <!--banner結束-->
 
 <!--內容開始-->
-<div class="container-xl py-5 js-container position-relative">
+<div class="container-xl py-4 py-md-5 js-container position-relative">
 	<div class="content-box">
 		<h3 class="content-box-title pt-3">
 			<div class="content-box-id">1</div>
 			<p>請輸入關鍵字</p>
-			<span class="content-box-txt pe-4 pe-xl-5">※ 請先選擇搜尋的類別，再依此輸入相關的關鍵字內容</span>
+			<span class="content-box-txt px-4 px-xl-5">※ 請先選擇搜尋的類別，再依此輸入相關的關鍵字內容</span>
 		</h3>
 		<div class="content-box-body px-4 px-xl-5">
 			<form class="row gx-3">
@@ -97,7 +97,7 @@
 		<h3 class="content-box-title pt-3">
 			<div class="content-box-id">2</div>
 			<p>檢索結果</p>
-			<span class="content-box-txt pe-4 pe-xl-5">※ 請選擇要防治的害物對象</span>
+			<span class="content-box-txt px-4 px-xl-5">※ 請選擇要防治的害物對象</span>
 		</h3>
 		<div class="content-box-body px-4 px-xl-5">
 			<div class="row">
@@ -112,11 +112,11 @@
 			</div>
 		</div>
 	</div>
-	<div class="content-box pb-0">
+	<div class="content-box pb-2">
 		<h3 class="content-box-title pt-3">
 			<div class="content-box-id">1</div>
 			<p>推薦產品</p>
-			<span class="content-box-txt pe-4 pe-xl-5">※ 請選擇要防治的害物對象</span>
+			<span class="content-box-txt px-4 px-xl-5">※ 請選擇要防治的害物對象</span>
 		</h3>
 		<div class="content-box-body px-4 px-xl-5">
 			<ul class="row card-list align-items-stretch gx-3 gx-xl-4 pt-sm-5">
