上傳剩下頁面

--- a/product.html
+++ b/product.html
@@ -378,7 +378,7 @@
                 </button>
             </li>
         </ul>
-        <div class="tab-content px-4 px-xl-5 py-4 pt-xl-5" id="myTabContent">
+        <div class="tab-content p-4 px-xl-5" id="myTabContent">
             <div class="tab-pane fade show active" id="product1" role="tabpanel" tabindex="0">
                 <h3 class="subtitle mb-3">商品介紹</h3>
                 <ul class="text-list mb-5">
@@ -457,10 +457,236 @@
                 </ul>
             </div>
             <div class="tab-pane fade" id="product2" role="tabpanel" tabindex="0">
-                核准使用範圍及方法
+                <table class="table-rwd table-striped">
+                    <thead>
+                        <tr>
+                            <th class="text-center" scope="col" width="50">項次</th>
+                            <th class="text-center" scope="col">作物名稱</th>
+                            <th class="text-center" scope="col">相關病蟲草害</th>
+                            <th class="text-center" scope="col">每公頃每次施藥量</th>
+                            <th class="text-center" scope="col">稀釋倍數</th>
+                            <th class="text-center" scope="col">安全採收期</th>
+                            <th class="text-center" scope="col">施藥時期及方法</th>
+                            <th class="text-center" scope="col">施藥注意事項</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td data-th="項次" scope="row">1</td>
+                            <td data-th="作物名稱">十字花科包葉菜類</td>
+                            <td data-th="相關病蟲草害">葉部薊馬類</td>
+                            <td data-th="每公頃每次施藥量">0.5-0.6公升</td>
+                            <td data-th="稀釋倍數">2000 倍</td>
+                            <td data-th="安全採收期">15 天</td>
+                            <td data-th="施藥時期及方法">害蟲發生時開始施藥</td>
+                            <td data-th="施藥注意事項">施藥間隔 10 天</td>
+                        </tr>
+                        <tr>
+                            <td data-th="項次" scope="row">2</td>
+                            <td data-th="作物名稱">十字花科包葉菜類</td>
+                            <td data-th="相關病蟲草害">葉部薊馬類</td>
+                            <td data-th="每公頃每次施藥量">0.5-0.6公升</td>
+                            <td data-th="稀釋倍數">2000 倍</td>
+                            <td data-th="安全採收期">15 天</td>
+                            <td data-th="施藥時期及方法">害蟲發生時開始施藥</td>
+                            <td data-th="施藥注意事項">施藥間隔 10 天</td>
+                        </tr>
+                        <tr>
+                            <td data-th="項次" scope="row">3</td>
+                            <td data-th="作物名稱">十字花科包葉菜類</td>
+                            <td data-th="相關病蟲草害">葉部薊馬類</td>
+                            <td data-th="每公頃每次施藥量">0.5-0.6公升</td>
+                            <td data-th="稀釋倍數">2000 倍</td>
+                            <td data-th="安全採收期">15 天</td>
+                            <td data-th="施藥時期及方法">害蟲發生時開始施藥</td>
+                            <td data-th="施藥注意事項">施藥間隔 10 天</td>
+                        </tr>
+                        <tr>
+                            <td data-th="項次" scope="row">4</td>
+                            <td data-th="作物名稱">十字花科包葉菜類</td>
+                            <td data-th="相關病蟲草害">葉部薊馬類</td>
+                            <td data-th="每公頃每次施藥量">0.5-0.6公升</td>
+                            <td data-th="稀釋倍數">2000 倍</td>
+                            <td data-th="安全採收期">15 天</td>
+                            <td data-th="施藥時期及方法">害蟲發生時開始施藥</td>
+                            <td data-th="施藥注意事項">施藥間隔 10 天</td>
+                        </tr>
+                        <tr>
+                            <td data-th="項次" scope="row">5</td>
+                            <td data-th="作物名稱">十字花科包葉菜類</td>
+                            <td data-th="相關病蟲草害">葉部薊馬類</td>
+                            <td data-th="每公頃每次施藥量">0.5-0.6公升</td>
+                            <td data-th="稀釋倍數">2000 倍</td>
+                            <td data-th="安全採收期">15 天</td>
+                            <td data-th="施藥時期及方法">害蟲發生時開始施藥</td>
+                            <td data-th="施藥注意事項">施藥間隔 10 天</td>
+                        </tr>
+                        <tr>
+                            <td data-th="項次" scope="row">6</td>
+                            <td data-th="作物名稱">十字花科包葉菜類</td>
+                            <td data-th="相關病蟲草害">葉部薊馬類</td>
+                            <td data-th="每公頃每次施藥量">0.5-0.6公升</td>
+                            <td data-th="稀釋倍數">2000 倍</td>
+                            <td data-th="安全採收期">15 天</td>
+                            <td data-th="施藥時期及方法">害蟲發生時開始施藥</td>
+                            <td data-th="施藥注意事項">施藥間隔 10 天</td>
+                        </tr>
+                        <tr>
+                            <td data-th="項次" scope="row">7</td>
+                            <td data-th="作物名稱">十字花科包葉菜類</td>
+                            <td data-th="相關病蟲草害">葉部薊馬類</td>
+                            <td data-th="每公頃每次施藥量">0.5-0.6公升</td>
+                            <td data-th="稀釋倍數">2000 倍</td>
+                            <td data-th="安全採收期">15 天</td>
+                            <td data-th="施藥時期及方法">害蟲發生時開始施藥</td>
+                            <td data-th="施藥注意事項">施藥間隔 10 天</td>
+                        </tr>
+                        <tr>
+                            <td data-th="項次" scope="row">8</td>
+                            <td data-th="作物名稱">十字花科包葉菜類</td>
+                            <td data-th="相關病蟲草害">葉部薊馬類</td>
+                            <td data-th="每公頃每次施藥量">0.5-0.6公升</td>
+                            <td data-th="稀釋倍數">2000 倍</td>
+                            <td data-th="安全採收期">15 天</td>
+                            <td data-th="施藥時期及方法">害蟲發生時開始施藥</td>
+                            <td data-th="施藥注意事項">施藥間隔 10 天</td>
+                        </tr>
+                        <tr>
+                            <td data-th="項次" scope="row">9</td>
+                            <td data-th="作物名稱">十字花科包葉菜類</td>
+                            <td data-th="相關病蟲草害">葉部薊馬類</td>
+                            <td data-th="每公頃每次施藥量">0.5-0.6公升</td>
+                            <td data-th="稀釋倍數">2000 倍</td>
+                            <td data-th="安全採收期">15 天</td>
+                            <td data-th="施藥時期及方法">害蟲發生時開始施藥</td>
+                            <td data-th="施藥注意事項">施藥間隔 10 天</td>
+                        </tr>
+                        <tr>
+                            <td data-th="項次" scope="row">10</td>
+                            <td data-th="作物名稱">十字花科包葉菜類</td>
+                            <td data-th="相關病蟲草害">葉部薊馬類</td>
+                            <td data-th="每公頃每次施藥量">0.5-0.6公升</td>
+                            <td data-th="稀釋倍數">2000 倍</td>
+                            <td data-th="安全採收期">15 天</td>
+                            <td data-th="施藥時期及方法">害蟲發生時開始施藥</td>
+                            <td data-th="施藥注意事項">施藥間隔 10 天</td>
+                        </tr>
+                        <tr>
+                            <td data-th="項次" scope="row">11</td>
+                            <td data-th="作物名稱">十字花科包葉菜類</td>
+                            <td data-th="相關病蟲草害">葉部薊馬類</td>
+                            <td data-th="每公頃每次施藥量">0.5-0.6公升</td>
+                            <td data-th="稀釋倍數">2000 倍</td>
+                            <td data-th="安全採收期">15 天</td>
+                            <td data-th="施藥時期及方法">害蟲發生時開始施藥</td>
+                            <td data-th="施藥注意事項">施藥間隔 10 天</td>
+                        </tr>
+                        <tr>
+                            <td data-th="項次" scope="row">12</td>
+                            <td data-th="作物名稱">十字花科包葉菜類</td>
+                            <td data-th="相關病蟲草害">葉部薊馬類</td>
+                            <td data-th="每公頃每次施藥量">0.5-0.6公升</td>
+                            <td data-th="稀釋倍數">2000 倍</td>
+                            <td data-th="安全採收期">15 天</td>
+                            <td data-th="施藥時期及方法">害蟲發生時開始施藥</td>
+                            <td data-th="施藥注意事項">施藥間隔 10 天</td>
+                        </tr>
+                        <tr>
+                            <td data-th="項次" scope="row">13</td>
+                            <td data-th="作物名稱">十字花科包葉菜類</td>
+                            <td data-th="相關病蟲草害">葉部薊馬類</td>
+                            <td data-th="每公頃每次施藥量">0.5-0.6公升</td>
+                            <td data-th="稀釋倍數">2000 倍</td>
+                            <td data-th="安全採收期">15 天</td>
+                            <td data-th="施藥時期及方法">害蟲發生時開始施藥</td>
+                            <td data-th="施藥注意事項">施藥間隔 10 天</td>
+                        </tr>
+                        <tr>
+                            <td data-th="項次" scope="row">14</td>
+                            <td data-th="作物名稱">十字花科包葉菜類</td>
+                            <td data-th="相關病蟲草害">葉部薊馬類</td>
+                            <td data-th="每公頃每次施藥量">0.5-0.6公升</td>
+                            <td data-th="稀釋倍數">2000 倍</td>
+                            <td data-th="安全採收期">15 天</td>
+                            <td data-th="施藥時期及方法">害蟲發生時開始施藥</td>
+                            <td data-th="施藥注意事項">施藥間隔 10 天</td>
+                        </tr>
+                        <tr>
+                            <td data-th="項次" scope="row">15</td>
+                            <td data-th="作物名稱">十字花科包葉菜類</td>
+                            <td data-th="相關病蟲草害">葉部薊馬類</td>
+                            <td data-th="每公頃每次施藥量">0.5-0.6公升</td>
+                            <td data-th="稀釋倍數">2000 倍</td>
+                            <td data-th="安全採收期">15 天</td>
+                            <td data-th="施藥時期及方法">害蟲發生時開始施藥</td>
+                            <td data-th="施藥注意事項">施藥間隔 10 天</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
             <div class="tab-pane fade" id="product3" role="tabpanel" tabindex="0">
-                藥劑資料
+                <div class="info-box border-0 mb-4">
+                    <div class="info-box-header mb-3">
+                        <h3 class="info-box-title">藥劑基本資料</h3>
+                    </div>
+                    <div class="info-box-body" data-height="auto">
+                        <div class="row mb-lg-3 mb-0 mb-sm-3">
+                            <div class="col-sm-6 col-md-4 mb-3 mb-sm-0">
+                                <label for="name-tc" class="form-label">農藥中文名稱</label>
+                                <input type="text" class="form-control" id="name-tc" value="賽洛寧">
+                            </div>
+                            <div class="col-sm-6 col-md-8 mb-3 mb-sm-0">
+                                <label for="name-en" class="form-label">農藥英文名稱</label>
+                                <input type="text" class="form-control" id="name-en" value="lambda-cyhalothrin">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6 col-md-4 col-lg-4 col-xl mb-3 mb-xl-0">
+                                <label for="content" class="form-label">含量</label>
+                                <input type="text" class="form-control" id="content" value="24.6 (%)">
+                            </div>
+                            <div class="col-sm-6 col-md-4 col-lg-4 col-xl mb-3 mb-xl-0">
+                                <label for="type" class="form-label">農藥使用類別</label>
+                                <input type="text" class="form-control" id="type" value="殺蟲劑">
+                            </div>
+                            <div class="col-sm-6 col-md-4 col-lg-4 col-xl mb-3 mb-xl-0">
+                                <label for="sort" class="form-label">藥劑種類</label>
+                                <input type="text" class="form-control" id="sort" value="單劑">
+                            </div>
+                            <div class="col-sm-6 col-md-4 col-lg-4 col-xl mb-3 mb-xl-0">
+                                <label for="kind" class="form-label">藥劑類別</label>
+                                <input type="text" class="form-control" id="kind" value="有機化學製劑">
+                            </div>
+                            <div class="col-sm-6 col-md-4 col-lg-4 col-xl">
+                                <label for="item" class="form-label">劑型</label>
+                                <input type="text" class="form-control" id="item" value="CS 膠囊懸著劑">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="info-box">
+                    <div class="info-box-header">
+                        <h3 class="info-box-title">藥劑作用機制</h3>
+                    </div>
+                    <div class="info-box-body scrollbar" data-height="auto">
+                        <div class="px-3 px-lg-5 py-4">
+                            <h4 class="info-box-item-title mb-3">
+                                <p>賽洛寧</p><span>農藥作用機制代碼 IRAC 3A</span>
+                            </h4>
+                            <div class="info-box-item">
+                                <div class="info-box-item-header">
+                                    化學成分
+                                </div>
+                                <div class="info-box-item-body">
+                                    A reaction product comprising equal quantities of (S)-a-cyano-3-phenoxybenzyl
+                                    (Z)-(1R,3R)-3-(2-chloro-3,3,3-trifluoroprop-1-enyl)-2,2-dimethylcyclopropanecarboxylate
+                                    and (R)-a-cyano-3-phenoxybenzyl
+                                    (Z)-(1S,3S)-3-(2-chloro-3,3,3-trifluoroprop-1-enyl)-2,2-dimethylcyclopropanecarboxylate
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="tab-pane fade" id="product4" role="tabpanel" tabindex="0">
                 <div class="info-box">
@@ -479,12 +705,14 @@
                             <div class="info-box-content">
                                 <div class="mb-4">
                                     <h5 class="info-box-subsubtitle">英文名稱</h5>
-                                    <div class="info-box-highlight">Cabbage worm (緣點紋白蝶) Imported cabbage worm (紋白蝶)</div>
+                                    <div class="info-box-highlight">Cabbage worm (緣點紋白蝶) Imported cabbage worm (紋白蝶)
+                                    </div>
                                 </div>
                                 <div class="mb-4">
                                     <h5 class="info-box-subsubtitle">學名</h5>
                                     <div class="info-box-highlight">
-                                        Artogeia（Pieris）canidia sordida Butler (緣點紋白蝶) Artogeia（Pieris）rapae crucivova Boisduval (紋白蝶)
+                                        Artogeia（Pieris）canidia sordida Butler (緣點紋白蝶) Artogeia（Pieris）rapae crucivova
+                                        Boisduval (紋白蝶)
                                     </div>
                                 </div>
                                 <div class="mb-4">
@@ -513,12 +741,14 @@
                             <div class="info-box-content">
                                 <div class="mb-4">
                                     <h5 class="info-box-subsubtitle">英文名稱</h5>
-                                    <div class="info-box-highlight">Cabbage worm (緣點紋白蝶) Imported cabbage worm (紋白蝶)</div>
+                                    <div class="info-box-highlight">Cabbage worm (緣點紋白蝶) Imported cabbage worm (紋白蝶)
+                                    </div>
                                 </div>
                                 <div class="mb-4">
                                     <h5 class="info-box-subsubtitle">學名</h5>
                                     <div class="info-box-highlight">
-                                        Artogeia（Pieris）canidia sordida Butler (緣點紋白蝶) Artogeia（Pieris）rapae crucivova Boisduval (紋白蝶)
+                                        Artogeia（Pieris）canidia sordida Butler (緣點紋白蝶) Artogeia（Pieris）rapae crucivova
+                                        Boisduval (紋白蝶)
                                     </div>
                                 </div>
                                 <div class="mb-4">
@@ -540,7 +770,41 @@
                 </div>
             </div>
             <div class="tab-pane fade" id="product5" role="tabpanel" tabindex="0">
-                檔案下載與連結
+                <h3 class="subtitle mb-3">附件檔案</h3>
+                <ul class="row btn-list mb-4">
+                    <li class="col-sm-6 col-md-4 btn-list-item mb-4">
+                        <a href="#" class="btn-list-file"><span class="bg-danger-light-color">PDF</span>勁功夫安全資料表</a>
+                    </li>
+                    <li class="col-sm-6 col-md-4 btn-list-item mb-4">
+                        <a href="#" class="btn-list-file"><span class="bg-secondary-color">XLS</span>勁功夫安全資料表</a>
+                    </li>
+                    <li class="col-sm-6 col-md-4 btn-list-item mb-4">
+                        <a href="#" class="btn-list-file"><span class="bg-special-light-color">DOC</span>勁功夫安全資料表</a>
+                    </li>
+                    <li class="col-sm-6 col-md-4 btn-list-item mb-4">
+                        <a href="#" class="btn-list-file"><span class="bg-assist-color">PPT</span>勁功夫安全資料表</a>
+                    </li>
+                    <li class="col-sm-6 col-md-4 btn-list-item mb-4">
+                        <a href="#" class="btn-list-file"><span class="bg-bright-color">JPG</span>勁功夫安全資料表</a>
+                    </li>
+                    <li class="col-sm-6 col-md-4 btn-list-item mb-4">
+                        <a href="#" class="btn-list-file"><span class="bg-assist-light-color">PNG</span>勁功夫安全資料表</a>
+                    </li>
+                </ul>
+                <h3 class="subtitle mb-3">相關連結</h3>
+                <div class="row">
+                    <ul class="link-list">
+                        <li class="link-list-item mb-3">
+                            <a href="#" target="_blank" class="link-list-link"><p>勁功夫介紹影片 (Youtube)</p><i class="bi bi-chevron-right"></i></a>
+                        </li>
+                        <li class="link-list-item mb-3">
+                            <a href="#" target="_blank" class="link-list-link"><p>https://about.google/?fg=1&utm_source=google-&utm_medium=referral&utm_campaign=hp-header</p><i class="bi bi-chevron-right"></i></a>
+                        </li>
+                        <li class="link-list-item mb-3">
+                            <a href="#" target="_blank" class="link-list-link"><p>勁功夫介紹影片 (Youtube)</p><i class="bi bi-chevron-right"></i></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
