--- a/product.html
+++ b/product.html
@@ -772,22 +772,22 @@
             <div class="tab-pane fade" id="product5" role="tabpanel" tabindex="0">
                 <h3 class="subtitle mb-3">附件檔案</h3>
                 <ul class="row btn-list mb-4">
-                    <li class="col-sm-6 col-md-4 btn-list-item mb-4">
+                    <li class="col-sm-6 col-md-4 btn-list-item mb-3 mb-lg-4">
                         <a href="#" class="btn-list-file"><span class="bg-danger-light-color">PDF</span>勁功夫安全資料表</a>
                     </li>
-                    <li class="col-sm-6 col-md-4 btn-list-item mb-4">
+                    <li class="col-sm-6 col-md-4 btn-list-item mb-3 mb-lg-4">
                         <a href="#" class="btn-list-file"><span class="bg-secondary-color">XLS</span>勁功夫安全資料表</a>
                     </li>
-                    <li class="col-sm-6 col-md-4 btn-list-item mb-4">
+                    <li class="col-sm-6 col-md-4 btn-list-item mb-3 mb-lg-4">
                         <a href="#" class="btn-list-file"><span class="bg-special-light-color">DOC</span>勁功夫安全資料表</a>
                     </li>
-                    <li class="col-sm-6 col-md-4 btn-list-item mb-4">
+                    <li class="col-sm-6 col-md-4 btn-list-item mb-3 mb-lg-4">
                         <a href="#" class="btn-list-file"><span class="bg-assist-color">PPT</span>勁功夫安全資料表</a>
                     </li>
-                    <li class="col-sm-6 col-md-4 btn-list-item mb-4">
+                    <li class="col-sm-6 col-md-4 btn-list-item mb-3 mb-lg-4">
                         <a href="#" class="btn-list-file"><span class="bg-bright-color">JPG</span>勁功夫安全資料表</a>
                     </li>
-                    <li class="col-sm-6 col-md-4 btn-list-item mb-4">
+                    <li class="col-sm-6 col-md-4 btn-list-item mb-3 mb-lg-4">
                         <a href="#" class="btn-list-file"><span class="bg-assist-light-color">PNG</span>勁功夫安全資料表</a>
                     </li>
                 </ul>
