--- a/product.html
+++ b/product.html
@@ -633,33 +633,33 @@
                         <div class="row mb-lg-3 mb-0 mb-sm-3">
                             <div class="col-sm-6 col-md-4 mb-3 mb-sm-0">
                                 <label for="name-tc" class="form-label">農藥中文名稱</label>
-                                <input type="text" class="form-control" id="name-tc" value="賽洛寧">
+                                <input type="text" class="form-control" id="name-tc" value="賽洛寧" readonly>
                             </div>
                             <div class="col-sm-6 col-md-8 mb-3 mb-sm-0">
                                 <label for="name-en" class="form-label">農藥英文名稱</label>
-                                <input type="text" class="form-control" id="name-en" value="lambda-cyhalothrin">
+                                <input type="text" class="form-control" id="name-en" value="lambda-cyhalothrin" readonly>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-sm-6 col-md-4 col-lg-4 col-xl mb-3 mb-xl-0">
                                 <label for="content" class="form-label">含量</label>
-                                <input type="text" class="form-control" id="content" value="24.6 (%)">
+                                <input type="text" class="form-control" id="content" value="24.6 (%)" readonly>
                             </div>
                             <div class="col-sm-6 col-md-4 col-lg-4 col-xl mb-3 mb-xl-0">
                                 <label for="type" class="form-label">農藥使用類別</label>
-                                <input type="text" class="form-control" id="type" value="殺蟲劑">
+                                <input type="text" class="form-control" id="type" value="殺蟲劑" readonly>
                             </div>
                             <div class="col-sm-6 col-md-4 col-lg-4 col-xl mb-3 mb-xl-0">
                                 <label for="sort" class="form-label">藥劑種類</label>
-                                <input type="text" class="form-control" id="sort" value="單劑">
+                                <input type="text" class="form-control" id="sort" value="單劑" readonly>
                             </div>
                             <div class="col-sm-6 col-md-4 col-lg-4 col-xl mb-3 mb-xl-0">
                                 <label for="kind" class="form-label">藥劑類別</label>
-                                <input type="text" class="form-control" id="kind" value="有機化學製劑">
+                                <input type="text" class="form-control" id="kind" value="有機化學製劑" readonly>
                             </div>
                             <div class="col-sm-6 col-md-4 col-lg-4 col-xl">
                                 <label for="item" class="form-label">劑型</label>
-                                <input type="text" class="form-control" id="item" value="CS 膠囊懸著劑">
+                                <input type="text" class="form-control" id="item" value="CS 膠囊懸著劑" readonly>
                             </div>
                         </div>
                     </div>
