--- a/search.html
+++ b/search.html
@@ -60,7 +60,7 @@
 			<!--banner開始-->
 <div class="top-banner" data-con="product">
 	<div class="container-xl">
-		<h1 class="top-title mb-0">智慧檢索 <span>SEARCH</span></h2>
+		<h1 class="top-title mb-0">智慧檢索 <span>SEARCH</span></h1>
 	</div>
 </div>
 <!--banner結束-->
@@ -68,11 +68,11 @@
 <!--內容開始-->
 <div class="container-xl py-4 py-md-5 js-container position-relative">
 	<div class="content-box">
-		<h3 class="content-box-title pt-3">
+		<div class="content-box-title pt-3">
 			<div class="content-box-id">1</div>
 			<p>請輸入關鍵字</p>
 			<span class="content-box-txt px-4 px-xl-5">※ 請先選擇搜尋的類別，再依此輸入相關的關鍵字內容</span>
-		</h3>
+		</div>
 		<div class="content-box-body px-4 px-xl-5">
 			<form class="row gx-3">
 				<div class="col-sm-5 mb-3 mb-sm-0">
