--- a/index.html
+++ b/index.html
@@ -80,10 +80,18 @@
 			<i class="bi bi-arrow-left-circle"></i> 產品列表
 		</button>
 		<div class="side-menu-body scroll">
-			<button class="accordion-button collapsed" type="button" data-con="no-dropdown">
-				<i class="bi bi-check-all"></i> 全部
-			</button>
+			
 			<div class="accordion" id="accordionGroup">
+				<div class="accordion-item">
+					<h2 class="accordion-header">
+						<button class="accordion-button js-accordion-all" type="button" data-con="no-dropdown" data-bs-toggle="collapse"
+							data-bs-target="#collapse0">
+							<i class="bi bi-check-all"></i> 全部
+						</button>
+					</h2>
+					<div id="collapse0" class="accordion-collapse collapse" data-bs-parent="#accordionGroup">
+					</div>
+				</div>
 				<div class="accordion-item">
 					<h2 class="accordion-header">
 						<button class="accordion-button collapsed js-accordion-button" type="button" data-bs-toggle="collapse"
@@ -120,7 +128,7 @@
 					<h2 class="accordion-header">
 						<button class="accordion-button collapsed js-accordion-button" type="button" data-bs-toggle="collapse"
 							data-bs-target="#collapse2">
-							<i class="bi bi-plus-square"></i>殺草劑(48)
+							<i class="bi bi-plus-square"></i>殺草劑
 						</button>
 					</h2>
 					<div id="collapse2" class="accordion-collapse collapse" data-bs-parent="#accordionGroup">
