--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 					<h2 class="accordion-header">
 						<button class="accordion-button collapsed js-accordion-button" type="button" data-bs-toggle="collapse"
 							data-bs-target="#collapse2">
-							<i class="bi bi-plus-square"></i>殺草劑
+							<i class="bi bi-plus-square"></i>殺草劑(10)
 						</button>
 					</h2>
 					<div id="collapse2" class="accordion-collapse collapse" data-bs-parent="#accordionGroup">
@@ -159,33 +159,11 @@
 				<div class="accordion-item">
 					<h2 class="accordion-header">
 						<button class="accordion-button collapsed js-accordion-button" type="button" data-bs-toggle="collapse"
-							data-bs-target="#collapse3">
-							<i class="bi bi-plus-square"></i>殺菌劑(45)
+							data-bs-target="#collapse3" data-con="none">
+							殺菌劑
 						</button>
 					</h2>
 					<div id="collapse3" class="accordion-collapse collapse" data-bs-parent="#accordionGroup">
-						<div class="accordion-body">
-							<button class="accordion-button accordion-sub js-accordion-sub collapsed" type="button"
-								data-bs-toggle="collapse" data-bs-target="#collapse3-1">
-								<i class="bi bi-plus"></i>殺蟲劑(58)
-							</button>
-							<div id="collapse3-1" class="accordion-collapse collapse" data-bs-parent="#collapse3">
-								<ul>
-									<li><a href="#" class="accordion-link link-gray800">殺蟲劑(58)</a></li>
-									<li><a href="#" class="accordion-link link-gray800">殺菌劑(45)</a></li>
-								</ul>
-							</div>
-							<button class="accordion-button accordion-sub js-accordion-sub collapsed" type="button"
-								data-bs-toggle="collapse" data-bs-target="#collapse3-2">
-								<i class="bi bi-plus"></i>殺菌劑(45)
-							</button>
-							<div id="collapse3-2" class="accordion-collapse collapse" data-bs-parent="#collapse3">
-								<ul>
-									<li><a href="#" class="accordion-link link-gray800">殺蟲劑(58)</a></li>
-									<li><a href="#" class="accordion-link link-gray800">殺菌劑(45)</a></li>
-								</ul>
-							</div>
-						</div>
 					</div>
 				</div>
 				<div class="accordion-item">
