--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			type="button">
 			<i class="bi bi-arrow-left-circle"></i> 產品列表
 		</button>
-		<div class="side-menu-body scroll">
+		<div class="side-menu-body scrollbar">
 			
 			<div class="accordion" id="accordionGroup">
 				<div class="accordion-item">
